syntax = "proto3";
package grpc;

import "messages/artifact.proto";

service GatewayService {
  rpc CreateArtifact (CreateArtifactRequest) returns (ArtifactResponse);
}