syntax = "proto3";
package grpc;

import "google/protobuf/timestamp.proto";

message UserDTO {
    int32 id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}

// Request messages
message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password_hash = 3;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByUsernameRequest {
    string username = 1;
}

// Response messages
message UserResponse {
    UserDTO user = 1;
}


// User service
service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
}
